# qtevrec

./: CMakeLists.txt  LICENSE  README.md  canvaswidget.cpp  canvaswidget.h  eventserialization.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_canvaswidget.cpp  moc_mainwindow.cpp  moc_qinputeventrecorder.cpp  naiveserialization.cpp  qinputeventrecorder.cpp  qinputeventrecorder.h  qtevrec.pro  ui_mainwindow.h
